# lamplight-ai-agent

./: .gitignore  main.py  pyproject.toml
agents/advisory-agent/: NGROK_SETUP.md  README.md  ngrok.yml  pyproject.toml  run-with-ngrok.sh  test-ngrok.sh
agents/advisory-agent/scripts/: start_all_agents.sh  stop_all_agents.sh
agents/advisory-agent/src/: agent_router.py  agent_router_enhanced.py  api.py  query_classifier.py
agents/advisory-agent/tests/: README.md  performance_test.py  run_tests.sh  test_cases.json
agents/document-agent/: README.md  pyproject.toml
agents/document-agent/scripts/: build_embeddings.py  rebuild_expanded_docs.py  scrape_docs.py
agents/document-agent/src/: api.py  doc_chunker.py  doc_llm_agent.py  embedder.py  embedder_chroma.py  faiss_retriever.py  retriever.py  retriever_chroma.py  simple_retriever.py  web_scraper.py
agents/schema-agent/config/: SETUP.md  config.json  docker-compose.yml  environment.yml  pyproject.toml  schedule_config.json
agents/ship-agent/: .gitignore  API_CLEANUP_SUMMARY.md  CLEANUP_SUMMARY.md  MODULAR_GENERATOR_README.md  README.md  README_GENERATOR.md  SEQUENCE_DIAGRAM_README.md  YAML_GENERATOR_README.md  package-lock.json  pyproject.toml  test_multi_agent_enhanced.py
agents/ship-agent/config/: README.md  ap_automation_config.yaml  batch_generation.yaml  collection_generation.yaml  collection_with_solutions.yaml  consumer_credit_config.yaml  sample_generation_config.yaml  solutions_generation.yaml  trip_com_complete_e2e.yaml  trip_com_correct_generation.yaml  trip_com_full_generation.yaml  trip_com_yaml_generation.json  tripcom_correct_generation.yaml  tripcom_full_generation.yaml  tripcom_solutions.yaml  yaml_from_operations.json
agents/ship-agent/data/: mongodb_schema.js
agents/ship-agent/docs/: config_folder_guide.md  solutions_generator_guide.md
agents/ship-agent/examples/: usage_example.py
agents/ship-agent/geck/: .env.development.local.example  .env.example  README.md  claude.md  docker-compose.yml  netlify.toml  package-lock.json  package.json  tailwind.config.js  test-dashboard.html  test-enrichment-display.html  test-enrichment.js  test-generator-fix.md  test-generator.html  test-program.yaml
agents/ship-agent/scripts/: batch_migrate_collections.py  export_postman_collections.sh  postman-sync.sh  refresh-programs.sh  scheduled_export.py  start-generator-service.sh  yaml_config_summary.py
agents/ship-agent/solution-generator/: .env.example  POSTMAN_SYNC.md  README.md  final-validation.html  package-lock.json  package.json  postman-sync-config.json  test-mermaid.html  test-participant-names.html  test-postman-sync-config.json  tsconfig.json  validate-mermaid.html
agents/ship-agent/src/: api.py  context_manager.py  export_formatter.py  generator_service.py  implementation_llm_agent.py  modular_solution_generator.py  plugin_base.py  plugin_registry.py  postman_auto_exporter.py  postman_desktop_exporter.js  postman_sync.py  postman_to_mongodb_migrator.py  postman_to_yaml_generator.py  ship_agent.py  ship_agent_simplified.py  solutions_document_generator.py  subscriber_implementation_guide.py  unified_generator.py  workflow_diagram_generator.py  yaml_based_generator.py  (+1 more)
mcp/: .env.example  AGENTS_MCP_DECISION.md  ARCHITECTURE_REVIEW.md  CLEANUP_SUMMARY.md  CURRENT_ARCHITECTURE.md  MCP_COMPATIBILITY_GUIDE.md  README.md  README_DATA_SERVER.md  claude_config.json  cleanup_report.md  debug_query.py  launch.sh  launch_solutions.sh  pyproject.toml  run_server.sh  start_with_agents.sh  test_textcontent_fix.py
mcp/config/: server_config.json
mcp/scripts/: build_index.py
mcp/src/: __init__.py  data_server.py  hybrid_server.py  knowledge_base.py  llm_manager.py  mcp_wrapper_server.py  postman_sync.py  query_classifier.py  server.py  solutions_mcp_server.py  solutions_mcp_server_v2.py  tools.py
mcp/tests/: direct_test.py  test_components.py  test_mcp_client.py  test_minimal_server.py  test_server.py
(+482 files in other folders)
